--- a/app/src/main/res/animator/flip_left_in.xml
+++ b/app/src/main/res/animator/flip_left_in.xml
@@ -8,12 +8,12 @@
         android:valueFrom="1.0"
         android:valueTo="0.0" />
 
-    <!-- and visibility to View.VISIBLE. -->
+    <!-- and visibility to View.GONE. -->
     <objectAnimator
         android:duration="0"
         android:propertyName="visibility"
-        android:valueFrom="0x00000008"
-        android:valueTo="0x00000000"
+        android:valueFrom="0x00000000"
+        android:valueTo="0x00000008"
         android:valueType="intType" />
 
     <!-- Rotate. -->
@@ -31,4 +31,14 @@
         android:startOffset="@integer/card_flip_half_time_ms"
         android:valueFrom="0.0"
         android:valueTo="1.0" />
+
+    <!-- And visibility to View.VISIBLE. -->
+    <objectAnimator
+        android:duration="0"
+        android:propertyName="visibility"
+        android:startOffset="@integer/card_flip_half_time_ms"
+        android:valueFrom="0x00000008"
+        android:valueTo="0x00000000"
+        android:valueType="intType" />
+
 </set>
