--- a/app/src/main/res/animator/flip_left_out.xml
+++ b/app/src/main/res/animator/flip_left_out.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Before rotating, immediately set the visibility to View.VISIBLE. -->
+    <!-- Before rotating, immediately set the alpha to 1. -->
+    <objectAnimator
+        android:duration="0"
+        android:propertyName="alpha"
+        android:valueFrom="0.0"
+        android:valueTo="1.0" />
+
+    <!-- And visibility to View.VISIBLE. -->
     <objectAnimator
         android:duration="0"
         android:propertyName="visibility"
@@ -25,25 +32,25 @@
         android:valueFrom="1.0"
         android:valueTo="0.0" />
 
-    <!-- After rotating, immediately set the visibility to View.GONE. -->
+    <!-- and visibility to View.GONE. -->
     <objectAnimator
         android:duration="0"
         android:propertyName="visibility"
-        android:startOffset="@integer/card_flip_full_time_ms"
+        android:startOffset="@integer/card_flip_half_time_ms"
         android:valueFrom="0x00000000"
         android:valueTo="0x00000008"
         android:valueType="intType" />
 
-    <!-- And reset other property to start values for future reuses -->
+    <!-- After rotating, reset other property to start values for future reuses. -->
     <objectAnimator
-        android:duration="0"
+        android:duration="1"
         android:propertyName="rotationY"
         android:startOffset="@integer/card_flip_full_time_ms"
         android:valueFrom="180"
         android:valueTo="0" />
 
     <objectAnimator
-        android:duration="0"
+        android:duration="1"
         android:propertyName="alpha"
         android:startOffset="@integer/card_flip_full_time_ms"
         android:valueFrom="0.0"
