--- a/app/src/main/res/layout/card_recipe_back.xml
+++ b/app/src/main/res/layout/card_recipe_back.xml
@@ -23,6 +23,9 @@
             android:layout_marginTop="16dp"
             app:cardCornerRadius="24dp"
             app:cardElevation="0dp"
+            app:cardMaxElevation="0dp"
+            app:cardPreventCornerOverlap="false"
+            app:cardUseCompatPadding="true"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -39,32 +42,42 @@
 
         <android.support.constraint.Guideline
             android:id="@+id/card_recipe_back_account_image_guideline"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="48dp" />
+            app:layout_constraintGuide_begin="40dp"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="40dp" />
 
         <TextView
             android:id="@+id/card_recipe_back_account_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
             android:maxLines="1"
             android:text="Account name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintBottom_toTopOf="@+id/card_recipe_back_account_image_guideline"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toRightOf="@+id/card_recipe_back_account_image_container"
+            app:layout_constraintRight_toRightOf="parent"
             tools:text="Account name" />
 
         <TextView
             android:id="@+id/card_recipe_back_recipe_creation_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
             android:layout_marginTop="4dp"
             android:text="Creation date"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="@+id/card_recipe_back_account_title"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/card_recipe_back_account_image_guideline"
             tools:text="Creation date" />
 
@@ -87,6 +100,23 @@
             app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_account_image_container"
             tools:text="Recipe title at two lines Recipe title at two lines Recipe title at two lines" />
 
+        <!--Space with 16:9 aspect ratio for correct back and front card height-->
+        <android.support.percent.PercentFrameLayout
+            android:id="@+id/card_recipe_back_ar_space_container"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <Space
+                android:id="@+id/card_recipe_back_ar_space"
+                android:layout_width="match_parent"
+                app:layout_aspectRatio="178%"
+                app:layout_widthPercent="100%" />
+
+        </android.support.percent.PercentFrameLayout>
+
         <View
             android:id="@+id/card_recipe_back_button_horizontal_divider"
             android:layout_width="0dp"
@@ -95,11 +125,11 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="66dp"
             android:background="@color/gray_100"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_title" />
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_ar_space_container" />
 
         <View
             android:id="@+id/card_recipe_back_button_vertical_divider"
