--- a/app/src/main/res/layout/card_recipe_back.xml
+++ b/app/src/main/res/layout/card_recipe_back.xml
@@ -53,7 +53,7 @@
             android:id="@+id/card_recipe_back_account_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="2dp"
             android:layout_marginEnd="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
@@ -73,7 +73,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="2dp"
             android:text="Creation date"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="@+id/card_recipe_back_account_title"
@@ -90,15 +90,14 @@
             android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
-            android:maxLines="2"
-            android:text="Recipe title"
+            android:maxLines="1"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="18sp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/card_recipe_back_account_image_container"
-            tools:text="Recipe title at two lines Recipe title at two lines Recipe title at two lines" />
+            tools:text="Recipe title" />
 
         <!--Space with 16:9 aspect ratio for correct back and front card height-->
         <android.support.percent.PercentFrameLayout
@@ -125,7 +124,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="66dp"
+            android:layout_marginTop="64dp"
             android:background="@color/gray_100"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
