--- a/app/src/main/res/layout/card_recipe_front.xml
+++ b/app/src/main/res/layout/card_recipe_front.xml
@@ -37,14 +37,14 @@
 
         <TextView
             android:id="@+id/card_recipe_front_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
-            android:maxLines="2"
+            android:maxLines="1"
             android:text="Recipe title"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textSize="18sp"
@@ -62,11 +62,11 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="64dp"
             android:background="@color/gray_100"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_recipe_front_title" />
+            app:layout_constraintTop_toBottomOf="@+id/card_recipe_front_image_container" />
 
         <View
             android:id="@+id/card_recipe_front_button_vertical_divider"
