--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -39,13 +39,32 @@
         android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+    <include layout="@layout/bottom_recipe_detail" />
+
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_recipe_detail_fab"
+        android:id="@+id/activity_recipe_detail_fab_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:tint="@color/white"
         app:layout_anchor="@id/activity_recipe_detail_appbar"
         app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@drawable/ic_photo" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/activity_recipe_list_fab_cart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="80dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="80dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:tint="@color/white"
+        app:backgroundTint="?attr/colorPrimary"
+        app:layout_anchor="@id/activity_recipe_detail_appbar"
+        app:layout_anchorGravity="bottom|end"
+        app:srcCompat="@drawable/ic_cart" />
 
 </android.support.design.widget.CoordinatorLayout>
