--- a/app/src/main/res/menu/menu_recipe_detail.xml
+++ b/app/src/main/res/menu/menu_recipe_detail.xml
@@ -3,7 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.alsash.reciper.ui.activity.RecipeDetailActivity">
     <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+        android:id="@+id/menu_recipe_detail_edit"
+        android:icon="@drawable/ic_edit"
+        android:title="@string/action_edit"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/menu_recipe_detail_delete"
+        android:icon="@drawable/ic_delete"
+        android:title="@string/action_delete"
+        app:showAsAction="ifRoom" />
 </menu>
