--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -22,6 +22,16 @@
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+            <ImageView
+                android:id="@+id/activity_recipe_detail_toolbar_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"
+                app:layout_collapseMode="parallax"
+                app:srcCompat="@drawable/bg_drawer_header"
+                tools:ignore="ContentDescription" />
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/activity_recipe_detail_toolbar"
                 android:layout_width="match_parent"
